--- a/4_Response_function.ipynb
+++ b/4_Response_function.ipynb
@@ -54870,15 +54870,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ticker_name =   ticker_list[6]\n",
-    "# loading_dir = os.path.join(current_dir,\"data\",\"clean\", \"flash_crash\")\n",
-    "# plots_dir = os.path.join(current_dir,\"plots\",\"flash_crash\",ticker_name)\n",
-    "# file_dir = os.path.join(loading_dir,ticker_name)\n",
-    "# file_name = os.listdir(file_dir)[0]\n",
-    "# df = vaex.open(os.path.join(file_dir,file_name))\n",
-    "# tau_max = 1000\n",
+    "ticker_name =   ticker_list[6]\n",
+    "loading_dir = os.path.join(current_dir,\"data\",\"clean\", \"flash_crash\")\n",
+    "plots_dir = os.path.join(current_dir,\"plots\",\"flash_crash\",ticker_name)\n",
+    "file_dir = os.path.join(loading_dir,ticker_name)\n",
+    "file_name = os.listdir(file_dir)[0]\n",
+    "df = vaex.open(os.path.join(file_dir,file_name))\n",
+    "tau_max = 1000\n",
     "\n",
-    "# plot_3day_response_functions_15min(df, tau_max =tau_max, ticker = ticker_name,start_date='2010-05-05')"
+    "plot_3day_response_functions_15min(df, tau_max =tau_max, ticker = ticker_name,start_date='2010-05-05')"
    ]
   },
   {
